# giochini-bot

./: .gitignore  .ruff.toml  README.md  config-example.py  config.py  games.py  giochini.html  main.py  main_fastapi.py  old-giochini.html  parsers.py  pyproject.toml  requirements.txt  sqlite.db  tests.py  utils.py
db/: sqlite-bk.db  sqlite_bak.db  sqlite_bk.db  tests.db  user_settings.json
test/: test_games.py  test_utils.py
www/html/trifase.online/: index.html
www/html/trifase.online/giochini/: index.html  players.html
